fix(QLinearProgress): workaround for rounded borders on iOS #1269412694
#12694

--- a/ui/src/components/linear-progress/QLinearProgress.sass
+++ b/ui/src/components/linear-progress/QLinearProgress.sass
@@ -6,6 +6,7 @@
   font-size: 4px
   height: 1em
   color: var(--q-primary)
+  transform: scale3d(1, 1, 1)
 
   &__model, &__track
     transform-origin: 0 0
